corrected from demo feedback

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,23 @@
 #chart1 {
-  margin-right: 150px;
-  margin-left: 150px;
-  height: 800px;
+  margin-right: 50px;
+  margin-left: 50px;
+  height:900px;
   border-style: solid;
   border-width: 2px;
   background-color:LightYellow;
 }
 
 #chart2 {
-  margin-right: 150px;
-  margin-left: 150px;
-  height: 500px;
+  margin-right: 100px;
+  margin-left: 100px;
+  height: 570px;
   border-style: solid;
   border-width: 2px;
   background-color:LightGreen;
 }
 
 #map__container {
-  margin-left:100px;
+  margin-left:10px;
   margin-right:10px;
   padding:0 10px 0 0;
 }
@@ -35,9 +35,8 @@
    color: white;
 }
 
-/*
-#"map_container2" { 
-   height: 180; 
+#map_container2 {
+   height: 500px;
+   width:910px;
 }
 
-*/
